applications/arr-stack/base/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: arr-stack
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: homepage
