applications/arr-stack/base/homepage/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homepage.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
